started base template

--- a/footer.html
+++ b/footer.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>header</title>
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body>
-    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" />
-
-
-
-    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" />
+<body class="footer">
+    <base target="_parent" />
+    
 </body>
 
 </html>
