--- a/header.html
+++ b/header.html
@@ -16,12 +16,12 @@
         <ul>
             <li>
                 <a>
-                    page1
+                    Page 1
                 </a>
             </li>
             <li>
                 <a>
-                    page2
+                    Page 2
                 </a>
             </li>
         </ul>
