--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>header</title>
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
