fixed the fucking shit out of this

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" />
+    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
 
+    <p>pd</p>
 
-
-    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" />
+    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
 </body>
 
 </html>
