--- a/template.html
+++ b/template.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" />
+    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
 
     <!-- ... -->
 
 
-    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" />
+    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
 </body>
 
 </html>
