prepare header.html to be renamed to nav.html

--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe src="header.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
+    <iframe src="nav.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
 
     <!-- ... -->
 
