--- a/nav.html
+++ b/nav.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>header</title>
-    <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
+    <base target="_parent" />
 </head>
 
 <body class="header">
-    <base target="_parent" />
-    <nav>
+    <nav class="headerNav">
         <a href="index.html">index</a>
         <ul>
             <li>
