Start of structure (+ debug on)

--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8"/>
-    <title></title>
+    <meta charset="UTF-8" />
+    <title>La musique</title>
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
 <body>
-    <iframe src="nav.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
-
-    <p>pd</p>
-
-    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
+    <header>
+        <h1>Un site</h1>
+    </header>
+    <aside class="navbar">
+        <iframe src="header.html"></iframe>
+    </aside>
+    <main>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Bonjour monde !
+            </p>
+        </article>
+    </main>
+    <footer>
+        <iframe src="footer.html"></iframe>
+    </footer>
 </body>
 
 </html>
