correct index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Un site</h1>
     </header>
     <aside class="navbar">
-        <iframe src="header.html"></iframe>
+        <iframe src="nav.html"></iframe>
     </aside>
     <main>
         <article>
