Améliorations textes, ajouts de var/classes css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <body>
     <header>
+
         <h1>Un site</h1>
+        <div class="subtitle">
+            Proin vitae neque in sapien faucibus auctor id sed ipsum.
+        </div>
     </header>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
@@ -21,7 +25,12 @@
         <article>
             <h2>Hello world !</h2>
             <p>
-                Bonjour monde !
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
             </p>
         </article>
     </main>
