--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title></title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
@@ -11,12 +11,26 @@
 </head>
 
 <body>
-    <iframe src="nav.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
-
-    <!-- ... -->
-
-
-    <iframe src="footer.html" width="2000" height="100" scrolling="no" frameborder="0" ></iframe>
+        <header>
+                <h1></h1>
+                <div class="subtitle">
+                    
+                </div>
+            </header>
+            <aside class="navbar">
+                <iframe src="nav.html"></iframe>
+            </aside>
+            <main>
+                <article>
+                    <h2></h2>
+                    <p>
+                        
+                    </p>
+                </article>
+            </main>
+            <footer>
+                <iframe src="footer.html"></iframe>
+            </footer>
 </body>
 
 </html>
