--- a/nav.html
+++ b/nav.html
@@ -3,26 +3,62 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>header</title>
+    <title>nav</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
     <base target="_parent" />
 </head>
 
 <body class="header">
-    <nav class="headerNav">
-        <a href="index.html">index</a>
+    <nav class="header-nav">
         <ul>
             <li>
-                <a>
-                    Page 1
+                <a href="index.html">
+                    <img src="icon_placeholder.png" alt="icon item 00" />
+                    <span class="nav-text">Accueil</span>
                 </a>
             </li>
             <li>
-                <a>
-                    Page 2
+                <a href="">
+                    <img src="icon_placeholder.png" alt="icon item 00" />
+                    <span class="nav-text">Item 10</span>
                 </a>
             </li>
+            <li>
+                <a href="">
+                    <img src="icon_placeholder.png" alt="icon item 00" />
+                    <span class="nav-text">Item 20</span>
+                </a>
+            </li>
+            <li class="dropdown-title">
+                Item 30
+            </li>
+            <ul class="dropdown-content">
+                <li>
+                    <a href="">
+                        <img src="icon_placeholder.png" alt="icon item 00" />
+                        <span class="nav-text">Item 31</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="icon_placeholder.png" alt="icon item 00" />
+                        <span class="nav-text">Item 32</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="icon_placeholder.png" alt="icon item 00" />
+                        <span class="nav-text">Item 33</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="icon_placeholder.png" alt="icon item 00" />
+                        <span class="nav-text">Item 34</span>
+                    </a>
+                </li>
+            </ul>
         </ul>
     </nav>
 </body>
