séparation header / titre

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body>
     <header>
-
-        <h1>Un site</h1>
-        <div class="subtitle">
-            Proin vitae neque in sapien faucibus auctor id sed ipsum.
+        <div class="title">
+            <h1>Un site</h1>
+            <div class="subtitle">
+                Proin vitae neque in sapien faucibus auctor id sed ipsum.
+            </div>
         </div>
     </header>
     <aside class="navbar">
