muise en page index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <div class="blankDiv">
+    </div>
     <header>
         <div class="title">
             <h1>Un site</h1>
@@ -19,10 +21,80 @@
             </div>
         </div>
     </header>
+    <div class="head-img">
+        <img src="icon_placeholder.png" alt="image background" />
+    </div>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
+        <img src="icon_placeholder.png" alt="icon navbar" width="10" />
     </aside>
     <main>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
+        <article>
+            <h2>Hello world !</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
+                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
+                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                hendrerit ut ipsum.
+            </p>
+        </article>
         <article>
             <h2>Hello world !</h2>
             <p>
