--- a/index.html
+++ b/index.html
@@ -29,83 +29,109 @@
         <img src="icon_placeholder.png" alt="icon navbar" width="10" />
     </aside>
     <main>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
-        <article>
-            <h2>Hello world !</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed lacinia
-                urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in justo
-                vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                hendrerit ut ipsum.
-            </p>
-        </article>
+        <section>
+            <h2>First project</h2>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+        </section>
+        <section>
+            <h2>First project</h2>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+        </section>
+        <section>
+            <h2>First Project</h2>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+        </section>
+        <section>
+            <h2>First Project</h2>
+            <article>
+                <h3>Hello world !</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
+                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
+                    lacinia
+                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
+                    justo
+                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
+                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
+                    hendrerit ut ipsum.
+                </p>
+            </article>
+        </section>
     </main>
     <footer>
         <iframe src="footer.html"></iframe>
