--- a/template.html
+++ b/template.html
@@ -11,26 +11,32 @@
 </head>
 
 <body>
-        <header>
-                <h1></h1>
-                <div class="subtitle">
-                    
-                </div>
-            </header>
-            <aside class="navbar">
-                <iframe src="nav.html"></iframe>
-            </aside>
-            <main>
-                <article>
-                    <h2></h2>
-                    <p>
-                        
-                    </p>
-                </article>
-            </main>
-            <footer>
-                <iframe src="footer.html"></iframe>
-            </footer>
+    <header>
+        <div class="title">
+            <h1></h1>
+            <div class="subtitle">
+
+            </div>
+        </div>
+    </header>
+    <aside class="navbar">
+        <iframe src="nav.html"></iframe>
+        <img src="icon_placeholder.png" alt="icon navbar" width="10" />
+    </aside>
+    <main>
+        <section>
+            <h2></h2>
+            <article>
+                <h3></h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <iframe src="footer.html"></iframe>
+    </footer>
 </body>
 
 </html>
