finally fixed that not-centering text in navbar

--- a/nav.html
+++ b/nav.html
@@ -15,19 +15,19 @@
             <li>
                 <a href="index.html">
                     <img src="icon_placeholder.png" alt="icon item 00" />
-                    <span class="nav-text">Accueil</span>
+                    <div class="nav-text">Accueil</div>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="icon_placeholder.png" alt="icon item 00" />
-                    <span class="nav-text">Item 10</span>
+                    <div class="nav-text">Item 10</div>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="icon_placeholder.png" alt="icon item 00" />
-                    <span class="nav-text">Item 20</span>
+                    <div class="nav-text">Item 20</div>
                 </a>
             </li>
             <li>
@@ -36,25 +36,25 @@
                 <li>
                     <a href="">
                         <img src="icon_placeholder.png" alt="icon item 00" />
-                        <span class="nav-text">Item 31</span>
+                        <div class="nav-text">Item 31</div>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="icon_placeholder.png" alt="icon item 00" />
-                        <span class="nav-text">Item 32</span>
+                        <div class="nav-text">Item 32</div>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="icon_placeholder.png" alt="icon item 00" />
-                        <span class="nav-text">Item 33</span>
+                        <div class="nav-text">Item 33</div>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="icon_placeholder.png" alt="icon item 00" />
-                        <span class="nav-text">Item 34</span>
+                        <div class="nav-text">Item 34</div>
                     </a>
                 </li>
             </ul>
