added side arrow, anims and scrollbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
-        <img src="icon_placeholder.png" alt="icon navbar" width="10" />
+        <img class="navbar-line" src="res/ligne.png" alt="icon navbar" />
+        <img class="navbar-arrow" src="res/fleche.png" alt="icon navbar" />
     </aside>
     <main>
         <section>
