--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
     <nav class="header-nav">
         <ul>
             <li>
-                <a href="index.html">
+                <a href="index.html#">
                     <img src="icon_placeholder.png" alt="icon item 00" />
                     <div class="nav-text">Accueil</div>
                 </a>
