moved the site's images to their own folder

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
-        <img class="navbar-line" src="res/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="res/fleche.png" alt="icon navbar" />
+        <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
+        <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
         <section>
