le commit nocturne (ajout logo) + Pulse

--- a/nav.html
+++ b/nav.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="header">
+    <a href="index.html#" class="logo50 logo-title">
+    </a>
+    <hr />
     <nav class="header-nav">
         <ul>
             <li>
@@ -32,32 +35,32 @@
             </li>
             <li>
                 Item 30
-            <ul>
-                <li>
-                    <a href="">
-                        <img src="icon_placeholder.png" alt="icon item 00" />
-                        <div class="nav-text">Item 31</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="icon_placeholder.png" alt="icon item 00" />
-                        <div class="nav-text">Item 32</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="icon_placeholder.png" alt="icon item 00" />
-                        <div class="nav-text">Item 33</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="icon_placeholder.png" alt="icon item 00" />
-                        <div class="nav-text">Item 34</div>
-                    </a>
-                </li>
-            </ul>
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <div class="nav-text">Item 31</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <div class="nav-text">Item 32</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <div class="nav-text">Item 33</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <div class="nav-text">Item 34</div>
+                        </a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </nav>
