--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>La musique</title>
-    <link rel="icon" href="favicon.ico" />
+    <title>Pulse</title>
+    <link rel="icon" href="images/pageIcon.png" />
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
@@ -15,7 +15,9 @@
     </div>
     <header>
         <div class="title">
-            <h1>Un site</h1>
+            <h1>
+                <a href="#" class="logo80"></a>
+            </h1>
             <div class="subtitle">
                 Proin vitae neque in sapien faucibus auctor id sed ipsum.
             </div>
