reorganise + format the menu title

--- a/nav.html
+++ b/nav.html
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li>
-                Item 30
+                <span class="dropdown-title"> Item 30 </span>
                 <ul>
                     <li>
                         <a href="">
