--- a/template.html
+++ b/template.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title></title>
-    <link rel="icon" href="favicon.ico" />
+    <title>template</title>
+    <link rel="icon" href="images/pageIcon.png" />
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
@@ -13,15 +13,18 @@
 <body>
     <header>
         <div class="title">
-            <h1></h1>
+            <h1>
+                <a href="index.html#" class="logo50"></a>
+            </h1>
             <div class="subtitle">
-
+                Proin vitae neque in sapien faucibus auctor id sed ipsum.
             </div>
         </div>
     </header>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
-        <img src="icon_placeholder.png" alt="icon navbar" width="10" />
+        <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
+        <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
         <section>
