le main n'a plus de offset

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
         <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
+    <div class="blank-div">
+    </div>
     <main>
         <section>
             <h2>First project</h2>
