page metal commencée

--- a/nav.html
+++ b/nav.html
@@ -22,24 +22,18 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="template.html#">
                     <img src="icon_placeholder.png" alt="icon item 00" />
-                    <div class="nav-text">Item 10</div>
+                    <div class="nav-text">template</div>
                 </a>
             </li>
             <li>
-                <a href="">
-                    <img src="icon_placeholder.png" alt="icon item 00" />
-                    <div class="nav-text">Item 20</div>
-                </a>
-            </li>
-            <li>
-                <span class="dropdown-title"> Item 30 </span>
+                <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="music/metal.html#">
                             <img src="icon_placeholder.png" alt="icon item 00" />
-                            <div class="nav-text">Item 31</div>
+                            <div class="nav-text">Metal</div>
                         </a>
                     </li>
                     <li>
