--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </div>
     </header>
     <div class="head-img">
-        <img src="icon_placeholder.png" alt="image background" />
+        <img src="images/musicBackgrounds/metal.jpg" alt="image background" />
     </div>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
         <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
         <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
-    <div class="blank-div">
+<div class="blank-div">
     </div>
     <main>
         <section>
