--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
         <ul>
             <li>
                 <a href="index.html#">
-                    <img src="icon_placeholder.png" alt="icon item 00" />
+                    <img src="images/icons/index.png" alt="icon item 00" />
                     <div class="nav-text">Accueil</div>
                 </a>
             </li>
