--- a/index.html
+++ b/index.html
@@ -34,10 +34,35 @@
     <div class="blank-div">
     </div>
     <main>
+        <section id="pulse_pres">
+            <h2>Pulse</h2>
+            <article>
+                <h3>Principe</h3>
+                <p>
+                    Pulse est une plateforme permettant de préciser les définitions générales de certains styles de
+                    musiques. L'idée de créer une telle plateforme vient du sujet n°3 des projets de 1e année en DUT
+                    Informatique. C'est la résultante d'un mois de travail coordonné, <a href="#whois">où chaque membre
+                        du projet</a> s'est vu attribuer des tâches précises dans le but de présenter un site qui
+                    présente différents styles de musique, et ce le plus précisément possible. Les styles de musiques
+                    présentés sont :
+                </p>
+                <ul>
+                    <li>La musique électronique</li>
+                    <li>Le metal</li>
+                    <li>La musique pop</li>
+                    <li>Le rock</li>
+                    <li>Le rap</li>
+                    <li>La musique alternative</li>
+                </ul>
+                <p>
+                    Ces styles de musique on été choisis car c'est ceux que nous écoutons le plus.
+                </p>
+            </article>
+        </section>
         <section>
-            <h2>First project</h2>
+            <h2>La Musique</h2>
             <article>
-                <h3>Hello world !</h3>
+                <h3>Son histoire</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
                     ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
@@ -50,7 +75,7 @@
                 </p>
             </article>
             <article>
-                <h3>Hello world !</h3>
+                <h3>Son évolution</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
                     ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
@@ -63,7 +88,7 @@
                 </p>
             </article>
             <article>
-                <h3>Hello world !</h3>
+                <h3>L'influence de la musique dans notre quotidien</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
                     ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
@@ -121,19 +146,14 @@
                 </p>
             </article>
         </section>
-        <section>
-            <h2>First Project</h2>
+        <section id="whois">
+            <h2>Qui sommes nous ?</h2>
             <article>
-                <h3>Hello world !</h3>
+                <h3>DUT Informatique</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
+                    Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
+                    une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
+                    des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
                 </p>
             </article>
         </section>
