added metal sub genre

--- a/music/metal.html
+++ b/music/metal.html
@@ -51,33 +51,123 @@
                     Le style de musique s'est divisé au fil du temps en plusieurs sous-genre (liste non exhaustive) :
                     <ul>
                         <li>
-                            <a href="">heavy metal</a>
+                            <a href="#heavy">Heavy metal</a>
                         </li>
                         <li>
-                            <a href="">thrash metal</a>
+                            <a href="#thrash">Thrash metal</a>
                         </li>
                         <li>
-                            <a href="">black metal</a>
+                            <a href="#black">Black metal</a>
                         </li>
                         <li>
-                            <a href="">death metal</a>
+                            <a href="#death">Death metal</a>
                         </li>
                         <li>
-                            <a href="">power metal</a>
+                            <a href="#power">Power metal</a>
                         </li>
                         <li>
-                            <a href="">folk metal</a>
+                            <a href="#folk">Folk metal</a>
                         </li>
                         <li>
-                            <a href="">doom metal</a>
+                            <a href="#doom">Doom metal</a>
                         </li>
                         <li>
-                            <a href="">alternative metal</a>
+                            <a href="#alternative">Alternative metal</a>
                         </li>
                         <li>
-                            <a href="">groove metal</a>
+                            <a href="#groove">Groove metal</a>
                         </li>
                     </ul>
+                </p>
+            </article>
+        </section>
+        <section id="heavy">
+            <article>
+                <h3>
+                    Heavy metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="thrash">
+            <article>
+                <h3>
+                    Thrash metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="black">
+            <article>
+                <h3>
+                    Black metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="death">
+            <article>
+                <h3>
+                    Death metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="power">
+            <article>
+                <h3>
+                    Power metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="folk">
+            <article>
+                <h3>
+                    Folk metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="doom">
+            <article>
+                <h3>
+                    Doom metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="alternative">
+            <article>
+                <h3>
+                    Alternative metal
+                </h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
+        <section id="groove">
+            <article>
+                <h3>
+                    Groove metal
+                </h3>
+                <p>
+
                 </p>
             </article>
         </section>
