--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     </div>
     <header>
         <div class="title">
-            <h1>
-                <a href="#" class="logo80"></a>
-            </h1>
+            <a href="#" class="logo80"></a>
             <div class="subtitle">
                 Proin vitae neque in sapien faucibus auctor id sed ipsum.
             </div>
@@ -64,28 +62,20 @@
             <article>
                 <h3>Son histoire</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
+                    La musique existe depuis les temps les plus reculés, avant même les premières traces humaines. Les
+                    recherches archéologiques font remonter l'utilisation d'instruments de musique (trous percés dans
+                    des instruments faits d'os ou d'argile) parfois associés à des instruments de chasse (tels les
+                    appeaux ou les rhombes formant un lasso lesté) à au moins 35 000 ans.
                 </p>
-            </article>
-            <article>
-                <h3>Son évolution</h3>
+                <span class="source">Source : Wikipedia</span>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
+                    Jusqu’au IXe siècle, l’Église s’efforce d’imposer partout le chant grégorien ou « plain-chant ».
+                    Cette musique austère se déploie en amples mélodies monodiques (une seule voix), dont le rythme et
+                    les inflexions sont étroitement liés au rythme et aux inflexions du texte liturgique. C'est au IXeme
+                    siècle que les premiers essais pour noter la musique sont effectués.
                 </p>
+                <span class="source">Source : Symphozik.info</span>
+                <span class="button"><a href="histoire.html">Lire la suite !</a></span>
             </article>
             <article>
                 <h3>L'influence de la musique dans notre quotidien</h3>
