--- a/nav.html
+++ b/nav.html
@@ -16,22 +16,22 @@
     <nav class="header-nav">
         <ul>
             <li>
-                <a href="index.html#">
+                <a href="index.html">
                     <img src="icon_placeholder.png" alt="icon item 00" />
                     <div class="nav-text">Accueil</div>
                 </a>
             </li>
             <li>
-                <a href="template.html#">
+                <a href="histoire.html">
                     <img src="icon_placeholder.png" alt="icon item 00" />
-                    <div class="nav-text">template</div>
+                    <div class="nav-text">Histoire</div>
                 </a>
             </li>
             <li>
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
-                        <a href="music/metal.html#">
+                        <a href="music/metal.html">
                             <img src="icon_placeholder.png" alt="icon item 00" />
                             <div class="nav-text">Metal</div>
                         </a>
