Le W3C est passé par là... Et il a vu rouge... P2

--- a/music/metal.html
+++ b/music/metal.html
@@ -25,21 +25,20 @@
         <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
-        <section>
-            <h2>
-            </h2>
+        <section class="no-top-separator">
+            <h2>! TITRE !</h2>
             <article>
                 <h3>
                     Le metal
                 </h3>
                 <p>
                     Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
-                    rapide et aggressif. <a href="https://wikipedia.org/wiki/Black_Sabbath">Black Sabbath</a> a été le
-                    premier groupe à proposer ce style, et est devenu l'emblême du metal, son créateur.
+                    rapide et agressif. <a href="https://wikipedia.org/wiki/Black_Sabbath">Black Sabbath</a> a été le
+                    premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
                 </p>
                 <figure>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
-                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                     <figcaption>
                         Un exemple ci-dessus : leur titre le plus connu, qui a été un énorme succès en 1970.
@@ -47,7 +46,8 @@
                 </figure>
                 <p>
                     Le style de musique s'est divisé au fil du temps en plusieurs sous-genre (liste non exhaustive) :
-                    <ul>
+                </p>
+                <ul>
                         <li>
                             <a href="">heavy metal</a>
                         </li>
@@ -76,7 +76,6 @@
                             <a href="">groove metal</a>
                         </li>
                     </ul>
-                </p>
             </article>
         </section>
     </main>
