on est pas sur twitter !

--- a/music/metal.html
+++ b/music/metal.html
@@ -13,7 +13,7 @@
 <body class="metal-bg">
     <header>
         <div class="title">
-            <a href="../index.html#" class="logo50"></a>
+            <a href="../index.html" class="logo50"></a>
             <div class="subtitle">
                 Metal
             </div>
