--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
     <header>
         <div class="title">
             <h1>
-                <a href="index.html#" class="logo50"></a>
+                <a href="index.html" class="logo50"></a>
             </h1>
             <div class="subtitle">
                 Proin vitae neque in sapien faucibus auctor id sed ipsum.
