--- a/histoire.html
+++ b/histoire.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="title">
-            <a href="index.html#" class="logo50"></a>
+            <a href="index.html" class="logo50"></a>
             <div class="subtitle">
                 Proin vitae neque in sapien faucibus auctor id sed ipsum.
             </div>
