impossibilité du nav à sortir du dossier music

--- a/nav.html
+++ b/nav.html
@@ -31,7 +31,7 @@
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
-                        <a href="music/metal.html">
+                        <a href="metal.html">
                             <img src="icon_placeholder.png" alt="icon item 00" />
                             <div class="nav-text">Metal</div>
                         </a>
