--- a/histoire.html
+++ b/histoire.html
@@ -41,10 +41,10 @@
                     toujours présents dans la musique et il est difficile de savoir lequel des deux fut le point de
                     départ de cet art ancestral (chants, battements de mains, choc de pierres ou de morceaux de bois).
                     On en trouve encore quelques traces de nos jours, dans des peuplades d'Afrique ou d'Amérique mais
-                    l'étude de la musique préhistorique paraît être une gageure1. Les recherches archéologiques font
+                    l'étude de la musique préhistorique paraît être une gageure. Les recherches archéologiques font
                     remonter l'utilisation d'instruments de musique (trous percés dans des instruments faits d'os ou
                     d'argile) parfois associés à des instruments de chasse (tels les appeaux ou les rhombes formant un
-                    lasso lesté) à au moins 35 000 ans2.
+                    lasso lesté) à au moins 35 000 ans.
                 </p>
                 <p>
                     On ne peut cependant pas avancer une date précise pour l'apparition de la musique. Au début, la
@@ -52,10 +52,10 @@
                     Les mélodies qu'ils inventaient traduisaient des sentiments, des émotions élémentaires. Le rythme
                     leur donnait vie. La danse est la musique du corps et ils dansaient et martelaient le sol avec les
                     pieds pour accompagner leur musique. Leurs danses consistaient entièrement en mouvements du corps et
-                    des bras, lents ou endiablés, doux ou violents, selon le sentiment exprimé3. Les hommes
+                    des bras, lents ou endiablés, doux ou violents, selon le sentiment exprimé. Les hommes
                     préhistoriques ont probablement adopté l'expression musicale au cours de cérémonies rituelles
                     associant gestes (fumigations, danses, d'où l'intérêt du nouveau champ d'études interdisciplinaire
-                    développé à la fin du XXe siècle), musique et chant5.
+                    développé à la fin du XXe siècle), musique et chant.
                 </p>
                 <p>
                     Leur musique pouvait être gaie ou mélancolique, leur tenir compagnie au travail ou à la guerre. Elle
@@ -83,6 +83,22 @@
                     Cette musique austère se déploie en amples mélodies monodiques (une seule voix), dont le rythme et
                     les inflexions sont étroitement liés au rythme et aux inflexions du texte liturgique. C'est au IXeme
                     siècle que les premiers essais pour noter la musique sont effectués.
+                </p>
+                <p>
+                    À partir du Xe siècle, on amplifie les chants grégoriens en leur ajoutant de nouvelles paroles ou
+                    des vocalises, puis en les doublant avec d’autres voix et en les développant. C’est le
+                    début de la polyphonie.
+                </p>
+                <p>
+                    Au XIIe et XIIIe siècles, la musique profane s’épanouit avec les troubadours puis les
+                    trouvères. C’est la période de l’amour courtois, des chansons de geste et des jeux. Les mélodies
+                    sont monodiques, simples mais raffinées, inspirées par le chant grégorien et la musique populaire,
+                    tel le Jeu de Robin et Marion d’Adam De La Halle
+                </p>
+                <p>
+                    Le XIVe siècle, est une période d’intenses recherches polyphoniques et rythmiques complexes (Ars
+                    Nova) menée notamment par Guillaume de Machaut. L’écriture musicale arrive quasiment à la
+                    perfection.
                 </p>
                 <span class="source">Source : Symphozik.info</span>
             </article>
