--- a/histoire.html
+++ b/histoire.html
@@ -86,14 +86,20 @@
                 </p>
                 <p>
                     À partir du Xe siècle, on amplifie les chants grégoriens en leur ajoutant de nouvelles paroles ou
-                    des vocalises, puis en les doublant avec d’autres voix et en les développant. C’est le
-                    début de la polyphonie.
+                    des vocalises, puis en les doublant avec d’autres voix et en les développant.
+                    C’est le début de la polyphonie.
                 </p>
+                <figure class="float-right">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/REVOIL_-_L%27Aubade_au_cygne.jpg/800px-REVOIL_-_L%27Aubade_au_cygne.jpg"
+                        alt="troubadour" width="200" />
+                        <figcaption>REVOIL - L'Aubade au cygne</figcaption>
+                </figure>
                 <p>
                     Au XIIe et XIIIe siècles, la musique profane s’épanouit avec les troubadours puis les
-                    trouvères. C’est la période de l’amour courtois, des chansons de geste et des jeux. Les mélodies
+                    trouvères.
+                    C’est la période de l’amour courtois, des chansons de geste et des jeux. Les mélodies
                     sont monodiques, simples mais raffinées, inspirées par le chant grégorien et la musique populaire,
-                    tel le Jeu de Robin et Marion d’Adam De La Halle
+                    tel le Jeu de Robin et Marion d’Adam De La Halle.
                 </p>
                 <p>
                     Le XIVe siècle, est une période d’intenses recherches polyphoniques et rythmiques complexes (Ars
