Histoire jusqu'a la renaissance (inclus)

--- a/histoire.html
+++ b/histoire.html
@@ -15,7 +15,7 @@
         <div class="title">
             <a href="index.html" class="logo50"></a>
             <div class="subtitle">
-                Proin vitae neque in sapien faucibus auctor id sed ipsum.
+                L'histoire de la musique, de l'os au bit.
             </div>
         </div>
     </header>
@@ -78,6 +78,18 @@
             </article>
             <article>
                 <h3>La musique durant le Moyen-Âge</h3>
+                <figure class="float-right">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/REVOIL_-_L%27Aubade_au_cygne.jpg/800px-REVOIL_-_L%27Aubade_au_cygne.jpg"
+                        alt="troubadour" width="200" />
+                    <figcaption>
+                        REVOIL - L'Aubade au cygne
+                        <div class="little-text">
+                        Un troubadour joue de son
+                        instrument à proximité d'une
+                        dame nourrissant un cygne.
+                        </div>
+                    </figcaption>
+                </figure>
                 <p>
                     Jusqu’au IXe siècle, l’Église s’efforce d’imposer partout le chant grégorien ou « plain-chant ».
                     Cette musique austère se déploie en amples mélodies monodiques (une seule voix), dont le rythme et
@@ -89,11 +101,6 @@
                     des vocalises, puis en les doublant avec d’autres voix et en les développant.
                     C’est le début de la polyphonie.
                 </p>
-                <figure class="float-right">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/REVOIL_-_L%27Aubade_au_cygne.jpg/800px-REVOIL_-_L%27Aubade_au_cygne.jpg"
-                        alt="troubadour" width="200" />
-                        <figcaption>REVOIL - L'Aubade au cygne</figcaption>
-                </figure>
                 <p>
                     Au XIIe et XIIIe siècles, la musique profane s’épanouit avec les troubadours puis les
                     trouvères.
@@ -108,7 +115,44 @@
                 </p>
                 <span class="source">Source : Symphozik.info</span>
             </article>
-
+            <article>
+                <h3>La renaissance</h3>
+                <figure class="float-right">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Viola_da_Gamba_Isenheimer_Altar.jpg/517px-Viola_da_Gamba_Isenheimer_Altar.jpg"
+                        alt="Voile de Gambe" width="150" />
+                    <figcaption> 
+                        GRÜNEWALD - Retable d'Issenheim
+                        <div class="little-text">
+                                Au premier plan une viole de gambe.
+                        </div>
+                    </figcaption>
+                </figure>
+                <p>
+                    La musique Renaissance couvre environ deux siècles. Elle se situe entre le Moyen Âge et le style
+                    baroque, c’est-à-dire de la deuxième moitié du XVe siècle jusqu’à la moitié du XVIIe siècle.
+                    L’époque baroque se termine en 1750, à la mort de Jean-Sébastien Bach.
+                </p>
+                <p>
+                    Au XVIe siècle, la musique commence à s’éloigner de l’Église, qui perd progressivement son pouvoir
+                    absolu. Elle est envisagée comme un divertissement qui s’adresse aussi aux hommes (les œuvres
+                    musicales étaient jusqu’alors exclusivement des œuvres religieuses, destinées à la gloire de Dieu).
+                    La musique acquiert une plus grande liberté d’expression et une diversité de thèmes : on parle alors
+                    de « renaissance musicale ». L’imprimerie va, en parallèle, permettre une diffusion plus rapide et
+                    efficace des œuvres composées, qui ne cessent de s’enrichir. De nombreux instruments de musique sont
+                    également créés durant la Renaissance parmi lesquels : la viole de gambe, la lyre, le luth, la
+                    vielle ou la harpe.
+                </p>
+                <p>
+                    Au XVIe siècle est inventé l’opéra. Le principe de l’opéra est de proposer un poème ou une pièce de
+                    théâtre dont les dialogues et paroles sont toujours chantés.
+                </p>
+                <p>
+                    Au XVIIIe siècle, le langage musical est en pleine évolution. La musique baroque est à la fois
+                    rigoureuse et construite de façon quasi mathématique, mais aussi fantaisiste et laissant une place à
+                    l’improvisation.
+                </p>
+                <span class="source">Source : La Quinte Juste</span>
+            </article>
         </section>
     </main>
     <footer>
