--- a/nav.html
+++ b/nav.html
@@ -28,6 +28,7 @@
                 </a>
             </li>
             <li>
+                <div class="separator"></div>
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
@@ -69,6 +70,7 @@
                 </ul>
             </li>
             <li>
+                <div class="separator"></div>
                 <span class="dropdown-title">Autres</span>
                 <ul>
                     <li>
