--- a/nav.html
+++ b/nav.html
@@ -25,6 +25,12 @@
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
+                        <a href="histoire.html">
+                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <div class="nav-text">Histoire de la musique</div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="metal.html">
                             <img src="icon_placeholder.png" alt="icon item 00" />
                             <div class="nav-text">Metal</div>
